# deepbar

./: .gitignore  README.md  pyproject.toml  setup.py
FlowMM/: coupling_transform.py
MMFlow/: __init__.py  coupling_transform.py  mmflow.py  rational_quadratic_spline.py  resnet.py
MMFlow/transform/: __init__.py  coupling_transform.py  rational_quadratic_spline.py
MMFlow/utils/: __init__.py  coordinate_transformer.py  functional.py
deepbar/: __init__.py
deepbar/utils/: __init__.py
examples/alanine_dipeptide/script/: compute_DKL.py  compute_dF_fastmbar_new.py  compute_energy_for_traj_from_umbrella_sampling.py  compute_pmf_from_umbrella_sampling.py  get_internal_coordinates.py  learn_mmflow_model.py  learn_model.py  make_masks.py  make_system.py  sample_from_mmflow_model.py  umbrella_sampling.spy
examples/alanine_dipeptide/structure/: alanine_dipeptide.prmtop  make_structure.leaprc  system.xml  system_with_bias.xml
examples/alanine_dipeptide_fm/: conf.yaml
examples/alanine_dipeptide_fm/script/: compute_energy_for_traj_from_umbrella_sampling.py  compute_pmf_from_umbrella_sampling.py  get_internal_coordinates.py  main.py  make_system.py  umbrella_sampling.spy
examples/alanine_dipeptide_fm/structure/: make_structure.leaprc  system.xml  system_with_bias.xml
examples/methyl_hexanoate/: MMFlow Tutorial-with_solvent.ipynb  README.rst  main.ipynb
examples/methyl_hexanoate/script/: compute_deltaF_with_alchem.py  (+7 more)
manifm/: model_pl.py
src/deepbar/: nflow.py
utils/: coordinate_transformer.py  coordinate_transformer_with_orientation.py  functional.py
(+20 files in other folders)
