[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "deepbar"
version = "0.0.1"
authors = [
  { name="Xinqiang Ding", email="Xinqiang.Ding@tufts.edu" }
]
description = "DeepBAR"
readme = "README.md"
#license = { file="LICENSE" }
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
#    "License :: OSI Approved :: ",
    "Operating System :: OS Independent",
]

# dependencies = [
#     'optax>=0.1.9',
#     'jax>=0.4.23',
#     'blackjax>=1.1.1',    
#     'numpy>=1.25.2',
#     'scipy>=1.11.4',
#     'tqdm>=4.66.2',
#     'pytest>=7.4.4'
# ]

# [project.urls]
# "Homepage" = "https://bayesmbar.readthedocs.io"
# "Bug Tracker" = "https://github.com/DingGroup/BayesMBAR/issues"

[tool.hatch.build]
exclude = [
  "examples/*",
]
